registerControl